simplify some things